--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-scroll-parallax": "^2.1.2"
   },
   "devDependencies": {
     "react-scripts": "2.1.8"
